fixed data fetch issue for the single user
